--- a/src/App.css
+++ b/src/App.css
@@ -105,7 +105,7 @@
   position: relative;
   width: 90%;
   top: 1rem;
-  
+
   border-radius: 1.25rem;
   background: #fff;
 
@@ -185,4 +185,6 @@
     display: none;
   }
 }
-/* Media Queries */
+.title-mobile {
+  border-bottom: 1px solid #ccc;
+}
